--- a/test.tex
+++ b/test.tex
@@ -1,1 +1,16 @@
-test
+\documentclass[11pt,a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[ngerman]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+
+\begin{document}
+\section{Einleitung}
+
+\section{Hauptteil}
+
+\section{Resümee}
+
+\end{document}
